; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_gif.c_ng_gif_shutdown.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netgraph/extr_ng_gif.c_ng_gif_shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@NGF_REALLY_DIE = common dso_local global i32 0, align 4
@M_NETGRAPH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*)* @ng_gif_shutdown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ng_gif_shutdown(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %5 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %6 = call i32 @NG_NODE_PRIVATE(%struct.TYPE_7__* %5)
  store i32 %6, i32* %4, align 4
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @NGF_REALLY_DIE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %1
  %14 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %15 = call i32 @NG_NODE_SET_PRIVATE(%struct.TYPE_7__* %14, i32* null)
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @M_NETGRAPH, align 4
  %18 = call i32 @free(i32 %16, i32 %17)
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %20 = call i32 @NG_NODE_UNREF(%struct.TYPE_7__* %19)
  store i32 0, i32* %2, align 4
  br label %24

21:                                               ; preds = %1
  %22 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %23 = call i32 @NG_NODE_REVIVE(%struct.TYPE_7__* %22)
  store i32 0, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %13
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @NG_NODE_PRIVATE(%struct.TYPE_7__*) #1

declare dso_local i32 @NG_NODE_SET_PRIVATE(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @free(i32, i32) #1

declare dso_local i32 @NG_NODE_UNREF(%struct.TYPE_7__*) #1

declare dso_local i32 @NG_NODE_REVIVE(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
